# gept2.0

./: .env.local  .gitignore  CLAUDE.md  Dockerfile  PRD.md  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json  settings.local.json
docs/phase1/: 00-overview.md  01-schema.md  02-connection.md  03-items-collector.md  04-prices-5min-collector.md  05-prices-1hr-collector.md  06-backfill.md  07-docker-compose.md
docs/phase2/: README.md
logs/: changes.md  errors.md
