[tool.poetry]
name = "gept2"
version = "0.1.0"
description = "OSRS Grand Exchange flipping tool with AI price prediction"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9"     # PostgreSQL driver
requests = "^2.31"            # HTTP client for Wiki API
python-dotenv = "^1.0"        # Load .env.local config

pandas = "^2.2"
numpy = "^1.26"
scikit-learn = "^1.4"
xgboost = "^2.0"
lightgbm = "^4.3"
joblib = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"